...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        self.title = "Contact"
        
        view.accessibilityIdentifier = "contactHomePage"
        tableView.accessibilityIdentifier = "homeTableId"
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = "add"
        
        tableView.rowHeight = UITableView.automaticDimension
        tableView.estimatedRowHeight = 44
        let footerView = UIView()
        footerView.backgroundColor = UIColor(red: 245/255, green: 245/255, blue: 245/255, alpha: 1.0)
        tableView.tableFooterView = footerView
...
