...
    private func removeActivityIndicator() {
        addRightBarButtonTiem()
    }
    
    private func addRightBarButtonTiem() {
        self.navigationItem.rightBarButtonItem = UIBarButtonItem(barButtonSystemItem: viewModel?.vmState == .detail ? .edit : .done , target: self, action: #selector(editbuttonTapped))
        self.navigationItem.rightBarButtonItem?.accessibilityIdentifier = viewModel?.vmState == .detail ? "edit" : "done"
    }
    
    private func addSubLayer() {
        let gradient: CAGradientLayer = CAGradientLayer()
        gradient.colors = [UIColor.white.cgColor, UIColor(red: 80/255, green: 227/255, blue: 194/255, alpha: 0.28).cgColor]
        gradient.locations = [0.0 , 1.0]
...
